# digital_processing

./: .gitignore  CMakeLists.txt  README.md
data/clean/: Sawtooth_clean.csv  Sine_clean.csv  Square_clean.csv  Triangle_clean.csv  signal_0.csv  signal_1.csv  signal_2.csv  signal_3.csv  signal_4.csv  signal_5.csv  signal_6.csv  signal_7.csv  signal_8.csv  signal_9.csv
data/extended/clean/: signal_0.csv  signal_1.csv  signal_2.csv  signal_3.csv  signal_4.csv  signal_5.csv  signal_6.csv  signal_7.csv  signal_8.csv  signal_9.csv
data/extended/noisy/: signal_0.csv  signal_1.csv  signal_2.csv  signal_3.csv  signal_4.csv  signal_5.csv  signal_6.csv  signal_7.csv  signal_8.csv  signal_9.csv
data/noisy/: Sawtooth_noisy.csv  Square_noisy.csv  Triangle_noisy.csv  signal_0.csv  signal_1.csv  signal_2.csv  signal_3.csv  signal_4.csv  signal_5.csv  signal_6.csv  signal_7.csv  signal_8.csv  signal_9.csv
data/radar/: burst_00_clean.csv  burst_00_noisy.csv  burst_01_clean.csv  burst_01_noisy.csv  burst_02_clean.csv  burst_02_noisy.csv  burst_03_clean.csv  burst_03_noisy.csv  burst_04_clean.csv  burst_04_noisy.csv  burst_05_noisy.csv
data/wiener/clean/: signal_3.csv  signal_5.csv
data/wiener/noisy/: signal_0.csv  signal_4.csv  signal_5.csv  signal_7.csv
data/wiener_hq/clean/: signal_0.csv  signal_1.csv  signal_2.csv  signal_4.csv  signal_6.csv  signal_7.csv
data/wiener_hq/noisy/: signal_1.csv  signal_2.csv  signal_3.csv  signal_6.csv
docs/: build_and_usage.md  results_analysis.md  theory.md
src/: adaptive_filter_selector.cpp  adaptive_filter_selector.h  doppler_nip_filter.cpp  doppler_nip_filter.h  generate_data.cpp  generate_extended_data.cpp  generate_radar_data.cpp  generate_wiener_data.cpp  kalman_filter.cpp  kalman_filter.h  main.cpp  median_filter.cpp  median_filter.h  morphological_filter.cpp  morphological_filter.h  outlier_detection.cpp  outlier_detection.h  performance_tester.cpp  performance_tester.h  pipeline_benchmark.cpp  robust_wiener_filter.cpp  robust_wiener_filter.h  savgol_filter.cpp  savgol_filter.h  signal_classifier.cpp  signal_classifier.h  signal_generator.cpp  signal_generator.h  signal_processor.cpp  signal_processor.h  spectral_subtraction_filter.cpp  spectral_subtraction_filter.h  wiener_filter.cpp  wiener_filter.h
src/utils/: fft.h  linear_system_solver.cpp  linear_system_solver.h  matrix2x2.cpp  matrix2x2.h  median.h
tests/: test_kalman.cpp  test_matrix2x2.cpp
view/: main_gui.cpp  signal_visualizer.cpp  signal_visualizer.h
view/shaders/: button.frag  button.vert  signal.frag  signal.vert
